# dk-marketplace

./: .apollo.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml  sync.sh
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.github/ISSUE_TEMPLATE/: feature_request.md
commands/: argos-approve.md  argos-status.md  pheme.md  unwatch.md
config/: default-policy.yaml  default-routes.yaml
config/templates/: oss.yaml
docs/: VISION.md  how-it-works.md  llm-quickstart.md
evals/: evals.json
examples/: sample-guided-case.md
go/: docker-compose.yml  go.mod  go.sum
go/web/: index.html  (+2 more)
hooks/: hooks.json  session-start.sh
integrations/: agent-writeback.md
lib/: notify.sh  policy.sh  poll.sh  state.sh
plugins/: memories
plugins/pheme/: AGENTS.md  README.md  pyproject.toml
plugins/pheme/.claude-plugin/: plugin.json
plugins/pheme/.codex/: INSTALL.md
plugins/pheme/commands/: pheme-status.md
plugins/pheme/docs/plans/: 2026-03-06-pheme-design.md
plugins/pheme/server/: __main__.py  server.py
plugins/pheme/skills/pheme/: SKILL.md
plugins/pheme/tests/: test_router.py  test_server.py
server/: config.py  router.py  server.py
src/: chunker.test.ts  config.ts  index.ts  manifest.test.ts  oauth.test.ts  oauth.ts  pipeline.test.ts  restart.md  scanner.ts  skill-generator.test.ts  storage.test.ts  storage.ts  types.ts
tests/: test-e2e.sh  test-notify.sh  test-policy.sh  test-poll.sh  test-state.sh  test_config.py  test_integration.py  test_server.py
(+231 files in other folders)
